Improve handling of subclasses without __gtype_name__

Gives a better message at type registration.

https://bugzilla.gnome.org/show_bug.cgi?id=616849